--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,24 +43,31 @@
     "    this function takes a string name as an argument \n",
     "    and prints a greeting including that name \n",
     "    \"\"\"\n",
-    "    \n",
-    "    print( )"
+    "    print(f'greetings! I am {name} and I am pleased to make your aquaintance!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAME =  # edit to set name as your actual name"
+    "NAME =  'Takehiro Yasuoka'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "greetings! I am Takehiro Yasuoka and I am pleased to make your aquaintance!\n"
+     ]
+    }
+   ],
    "source": [
     "printnamefunction(NAME)"
    ]
@@ -76,13 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your written answer here\n",
-    "\n"
+    "# I believe they are a great way for us to double check our progress and\n",
+    "# make sure we are understanding the material that is being given to us during our time here.\n",
+    "# They are also a great way for the instructors to measure our progress in the class and\n",
+    "# can make sure we are following along correctly with th material that is being presented in the class.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
