--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,23 +44,31 @@
     "    and prints a greeting including that name \n",
     "    \"\"\"\n",
     "    \n",
-    "    print( )"
+    "    print( f\"Greetings!! I am {name} and i am pleased to make your aquaintance!!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NAME =  # edit to set name as your actual name"
+    "NAME =  \"srikanth Gungi\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Greetings!! I am srikanth Gungi and i am pleased to make your aquaintance!!\n"
+     ]
+    }
+   ],
    "source": [
     "printnamefunction(NAME)"
    ]
@@ -75,14 +83,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Your written answer here\n",
+    "\n",
+    "Coding allows us to self check our application abilities and allows us to review ourself and paceup with the cource."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your written answer here\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -101,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
